<resources>
    <string name="app_name">Photo Find</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="coordinates">Coordinates: xx.xxxx..., yy.yyyy...</string>
    <string name="checkpoint_title">Checkpoint Title</string>
    <string name="upload_an_image">Upload an image</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Name</string>
    <string name="join_after_game_has_started">Join after game has started</string>
    <string name="add_checkpoint">Add checkpoint</string>
    <string name="create_new_game">Create New Game</string>
    <string name="creating_game">Creating game</string>
    <string name="game_has_ended">Game has ended</string>
    <string name="menu">Menu</string>
    <string name="your_name">Your Name</string>
    <string name="game_code">Game Code</string>
    <string name="game">Game</string>
    <string name="players">Players</string>
    <string name="newest">Newest</string>
    <string name="end_game">End Game</string>
    <string name="game_name">Game Name</string>
    <string name="start_game">Start Game</string>
    <string name="leave">Leave</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="wait_for_the_game_to_start">Wait for the game to start</string>
    <string name="player">Player</string>
    <string name="checkpoint">Checkpoint</string>
    <string name="time_ago">Time ago</string>
    <string name="view">View</string>
    <string name="code">Code: %1$s</string>
    <string name="add_checkpoints">Add checkpoints to game</string>
</resources>