<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.PlayerLobbyActivity">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="25sp"
            android:text="@string/game_name" />

        <TextView
            android:id="@+id/txtGameCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGameName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/game_code"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtGameCode"
            android:layout_marginTop="20dp"
            android:text="@string/wait_for_the_game_to_start" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlayerList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLobby"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/btnLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/leave" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pbGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>