<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.CreateGameActivity">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/edtTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_name"
            android:inputType="text" />

        <RelativeLayout
            android:id="@+id/rlOptionStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTxtInput"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/txtOptionStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/swOptionStarted"
                android:text="@string/join_after_game_has_started"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swOptionStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="true" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlOptionStarted" />

        <Button
            android:id="@+id/btnAddCheckpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rvImages"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/add_checkpoint" />

        <Button
            android:id="@+id/btnCreateNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnAddCheckpoint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/create_new_game" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCreatingGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/pbCreatingGame"
            android:layout_margin="30dp"
            android:textSize="20sp"
            android:text="@string/creating_game"/>

        <ProgressBar
            android:id="@+id/pbCreatingGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>